# tc5003b_webdev

./: .gitignore  Dockerfile  alembic.ini  async_example.py  decorator_example.py  docker-compose.yml  insert_users.sh  main.py  myapp.sqlite  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/versions/: cd2a963972a2_include_comment_field.py
myapp/: crud.py  database.py  main.py  models.py  schemas.py
myapp/static/js/: devices.js  first.js  first.min.js  login.js
myapp/templates/: devices.html  login.html
nginx_conf/: default.conf
